Removed non-working contact form.

--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@
         <hr>
       </div>
       <div class="col-md-8 col-md-offset-2">
-        <form method="POST" action="https://formspree.io/amverni@umich.edu">
+        <!-- <form method="POST" action="https://formspree.io/amverni@umich.edu">
           <input type="hidden" name="subject" value="Contact request from personal website" />
           <input type="text" name="name" class="form-control" placeholder="Name" required="required">
           <input type="email" name="email" class="form-control" placeholder="Email" required="required">
           <textarea name="message" class="form-control" rows="4" placeholder="Message" required="required"></textarea>
           <input type="text" name="_gotcha" style="display:none" />
           <button type="submit" class="btn btn-default">Send Message</button>
-        </form>
+        </form> -->
+        <p id="email-address">amverni@umich.edu</p>
         <div class="social">
           <ul>
             <li><a href="https://www.facebook.com/profile.php?id=100009483842716"><i class="fa fa-facebook"></i></a></li>
