--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/home.js"></script>
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="60" class="fade-in fade-in-1">
+<body class="fade-in fade-in-1">
 
 <!-- Header -->
 <div id="header" style="">
@@ -44,23 +43,28 @@
         </div>
 
         <div class="collapse navbar-collapse" id="collapsible-navbar">
-            <ul class="navbar-nav text-uppercase">
-                <li class="nav-item">
-                    <a class="nav-link scroll internal-page-link" href="#header">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link scroll internal-page-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link scroll internal-page-link" href="#contact">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link external-page-link" href="experiences.html">Experience</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link external-page-link" href="publications.html">Publications</a>
-                </li>
-            </ul>
+            <div class="navbar-nav text-uppercase">
+                <div class="nav-item dropdown">
+                    <a class="nav-link scroll active" href="#header">Home</a>
+                    <div class="dropdown-content">
+                        <a class="nav-link scroll" href="#about">About</a>
+                        <a class="nav-link scroll dropdown-content-last" href="#contact">Contact</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown">
+                    <a class="nav-link" href="experiences.html">Experience</a>
+                    <div class="dropdown-content">
+                        <a class="nav-link scroll" href="experiences.html#work-expereince">Work</a>
+                        <a class="nav-link scroll" href="experiences.html#research-expereince">Research</a>
+                        <a class="nav-link scroll" href="experiences.html#leadership-expereince">Leadership</a>
+                        <a class="nav-link scroll" href="experiences.html#education">Education</a>
+                        <a class="nav-link scroll dropdown-content-last" href="experiences.html#projects">Projects</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="publications.html">Publications</a>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
