Update with experiences through summer 2020

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col fade-in fade-in-2">
                 <h1>Andrew M. Vernier</h1>
-                <p>University of Michigan - Computer Science Engineering</p>
+                <p id="current-role">University of Michigan - Computer Science and Engineering</p>
             </div>
         </div>
     </div>
@@ -85,12 +85,12 @@
             <div class="col-xs-12 col-md-6 about-info">
                 <div class="about-text">
                     <p>
-                        My name is Andrew and I am a computer science student at the University of Michigan's College of Engineering.
-                        I have passions for programming, learning new things, and fitness and it is my goal to use these passions to positively impact the lives of others.
-                        My academic interests lie in artificial intelligence, autonomy, and robotics.
-                        I am currently exploring these interests through the <a href="http://croma.eecs.umich.edu/croma.html">Crowds and Machines (CROMA) Lab</a> advised by <a href="http://croma.eecs.umich.edu/index.html">Dr. Walter S. Lasecki</a> and the <a href="https://mrover.org">Michigan Mars Rover Team (MRover)</a>.
-                        In the CROMA Lab, I am researching hybrid intelligence systems (combining human and artificial intelligence) and human-computer interaction. On MRover, I am a senior advising member and former lead of the autonomous navigation subteam.
-                        In my free time, I enjoy hockey, college football, and sub-par golf.
+                        My name is Andrew and I am a master's student studying computer science at the University of Michigan's College of Engineering.
+                        My professional interests lie in web development, autonomy, and robotics and it is my goal to use these passions to positively impact the lives of others.
+                        I am currently exploring these interests by contributing to the <a href="experiences.html#mrover-project-experience">Michigan Mars Rover Team (MRover)</a>, where I am currently the <a href="experiences.html#mrover-advisor-experience">lead software technical advisor</a>, and by helping teach <a href="experiences.html#gsi-experience">Web Systems (EECS 485)</a>.
+                        I have extensive experience with user interfaces and object oriented programming.
+                        My most recent pet project was rebuilding the <a href="experiences.html#mrover-project-experience">MRover Navigation Simulator</a> and my most recent work experience was interning at <a href="experiences.html#amazon-experience">Amazon</a>.
+                        In my free time I enjoy watching sports, especially hockey and college football, working on DIY projects, and playing sub-par golf.
                     </p>
                     <div class="center-button-wrapper">
                         <a href="files/andrew_vernier_resume.pdf" class="btn btn-primary btn-lg page-scroll custom-button">My Resume</a></div>
@@ -136,6 +136,14 @@
         </form>
 
         <div class="row">
+            <div class="col-xs-12 col-md-12">
+                <p id="send-message-disclaimer"><em>
+                    After hitting send message, if you get a page telling you that this form needs activation, don't worry, I'll still get your message. This happens because the form gets deactivated after a period of time of not being used. Oddly enough my website is not most people's preferred method of contacting me, but don't let that stop you!
+                </em></p>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col social">
                 <ul class="social-icons list-inline">
                     <li class="list-inline-item">
@@ -174,7 +182,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Copyright &copy 2019 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
+                <p>Copyright &copy 2020 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
         </div>
     </div>
