--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col fade-in fade-in-2">
                 <h1>Andrew M. Vernier</h1>
-                <p>University of Michigan - Computer Science Engineering</p>
+                <p id="current-role">University of Michigan - Computer Science Engineering</p>
             </div>
         </div>
     </div>
@@ -96,7 +96,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Copyright &copy 2019 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
+                <p>Copyright &copy 2020 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
         </div>
     </div>
