--- a/experiences.html
+++ b/experiences.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col fade-in fade-in-2">
                 <h1>Andrew M. Vernier</h1>
-                <p id="current-role">University of Michigan - Computer Science Engineering</p>
+                <p id="current-role">Software Engineer @ Microsoft</p>
             </div>
         </div>
     </div>
@@ -79,7 +79,35 @@
             </div>
         </div>
 
-        <div id="gsi-experience" class="row experience-item-first">
+        <div id="microsoft-experience" class="row experience-item-first">
+            <div class="col-xs-12 mobile-only experience-image-container">
+                <img class="experience-image" src="img/microsoft.png">
+            </div>
+            <div class="col-xs-12 col-md-9 experience-text">
+                <div class="experience-info">
+                    <h4 class="job-title">Software Engineer</h4>
+                    <h5>Microsoft - Redmond, WA</h5>
+                    <h5>January 2020 - present</h5>
+                </div>
+                <div class="experience-description">
+                    <p>
+                        I currently work on the Azure Privileged Identity Management team where I help keep millions of users' identities secure in their day-to-day work.
+                        I am mainly focused on front-end web development which allows me to pursue my passion for creating impactful user interfaces.
+                        I am also exploring how our team can migrate from KnockoutJS to React within the constraints of internal frameworks in order to have a more performant and maintainable service. 
+                        I recently redesigned our team's end to end UI test project to increase reliability and maintainability through statelessness and object-oriented paradigms such as abstraction, encapsulation, and polymorphism.
+                        Additionally, I am improving our onboarding process by developing more robust documentation, a concrete on-call training guide, and serving as an onboarding buddy and mentor for our newest engineers.
+                    </p>
+                    <p>
+                        <em>Technical skills</em>: Typescript, KnockoutJS, React, C#, Sinon, Jasmine, Mocha, HTML, CSS, Azure Pipelines, Git
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3 desktop-only experience-image-container">
+                <img class="experience-image" src="img/microsoft.png">
+            </div>
+        </div>
+
+        <div id="gsi-experience" class="row experience-item">
             <div class="col-xs-12 col-md-3 experience-image-container">
                 <img class="experience-image" src="img/eecs485.png">
             </div>
@@ -91,7 +119,12 @@
                 </div>
                 <div class="experience-description">
                     <p>
-                        I recently joined the staff for EECS 485 - Web Systems as a Graduate Student Instructor (GSI) where I will be teaching students introductory web development concepts such as server and client-side dynamic pages, web security, and MapReduce. A new focus this semester will be on using cloud computing technologies such as AWS for scaling up web applications. On top of the normal responsiblities of being a GSI such as office hours and helping students with lab materials, I am responsible for coordinating logistics for exams and lab quizzes which is of particular importance this semester as we move to a completely remote offering of the course.
+                        I worked on the staff for EECS 485 - Web Systems as a Graduate Student Instructor (GSI) where I taught students introductory web development concepts such as server and client-side dynamic pages, web security, and MapReduce.
+                        A new focus for us was adding how to use cloud computing technologies such as AWS for scaling up web applications which we taught through hands on labs.
+                        On top of the normal responsiblities of being a GSI such as office hours and helping students with class concepts, I was responsible for coordinating logistics for the exams and quizzes which was of particular importance as we temporarily moved to a completely remote offering of the course.
+                    </p>
+                    <p>
+                        <em>Technical skills</em>: JavaScript, React, Python, Git
                     </p>
                 </div>
             </div>
@@ -104,7 +137,7 @@
             <div class="col-xs-12 col-md-9 experience-text">
                 <div class="experience-info">
                     <h4 class="job-title">Software Development Engineer Intern</h4>
-                    <h5>Amazon.com, Inc. - Seattle, WA (worked remotely)</h5>
+                    <h5>Amazon.com - Seattle, WA (worked remotely)</h5>
                     <h5>May - July 2020</h5>
                 </div>
                 <div class="experience-description">
@@ -112,7 +145,7 @@
                         I interned at Amazon for the summer of 2020 working on the Offer Listing Service team within the eCommerce Foundation group. I was tasked with building an audit tool to track historical data to allow my team's customers to easily query and visualize changes to that data. To implement my solution, I used AWS cloud computing technologies in order to handle large volumes of incoming traffic (the tool is currently handling over 500 transactions per second). I was able to enable continuous deployment of the tool by leveraging industry leading DevOps practices. This project was densley packed with learning opportunities. After the design phase, I presented multiple options along with my proposed design which I had settled on after multiple discussions with my teammates. This design meeting was a big wake-up call for me. Over the first few weeks of my internship I spent a lot of time fully understanding the problem I was trying to solve, however I failed to fully view the problem from the perspective of my customers which was a point drilled home at my design review. Moving forward, I had multiple meetings with my customers throughout the remainder of my internship which proved vital for building a product that they wanted to use. On the more technical side of things I learned many new skills involved in writing enterprise level software such as injection and mocking for unit testing.
                     </p>
                     <p>
-                        <em>Technical skills</em>: Java, AWS Cloud Computing (Lambda, Kinesis Firehose, S3, SNS, CloudFormation), Git
+                        <em>Technical skills</em>: Java, AWS Cloud Computing (Lambda, Kinesis Firehose, S3, SNS, CloudFormation), JUnit, Git
                     </p>
                 </div>
             </div>
@@ -535,7 +568,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Copyright &copy 2020 &nbsp&nbsp Andrew M. Vernier &nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
+                <p>Copyright &copy 2022 &nbsp&nbsp Andrew M. Vernier &nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
         </div>
     </div>
