--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col fade-in fade-in-2">
                 <h1>Andrew M. Vernier</h1>
-                <p id="current-role">University of Michigan - Computer Science and Engineering</p>
+                <p id="current-role">Software Engineer @ Microsoft</p>
             </div>
         </div>
     </div>
@@ -85,12 +85,17 @@
             <div class="col-xs-12 col-md-6 about-info">
                 <div class="about-text">
                     <p>
-                        My name is Andrew and I am a master's student studying computer science at the University of Michigan's College of Engineering.
-                        My professional interests lie in web development, autonomy, and robotics and it is my goal to use these passions to positively impact the lives of others.
-                        I am currently exploring these interests by contributing to the <a href="experiences.html#mrover-project-experience">Michigan Mars Rover Team (MRover)</a>, where I am currently the <a href="experiences.html#mrover-advisor-experience">lead software technical advisor</a>, and by helping teach <a href="experiences.html#gsi-experience">Web Systems (EECS 485)</a>.
-                        I have extensive experience with user interfaces and object oriented programming.
-                        My most recent pet project was rebuilding the <a href="experiences.html#mrover-project-experience">MRover Navigation Simulator</a> and my most recent work experience was interning at <a href="experiences.html#amazon-experience">Amazon</a>.
-                        In my free time I enjoy watching sports, especially hockey and college football, working on DIY projects, and playing sub-par golf.
+                        Hi! 
+                        My name is Andrew and I am a software engineer at Microsoft working on the Azure Privileged Identity Management team.
+                        I graduated from the University of Michigan in December 2020 with a master's degree in Computer Science and Engineering.
+                        My career goal is to use my passions to positively impact the lives of others while challenging myself to continually become a better version of myself.
+                        My professional interests lie in user experiences, autonomous robotics, and algorithms.
+                        With my current personal projects, I am exploring mobile applications, automated testing, and refactoring this website into React.
+                        I have experience with user interfaces, RESTful APIs, and object oriented programming.
+                        In my free time I love nearly anything sports related and do my best to stay active.
+                        My favorite sports to follow are hockey and football, especially the Michigan Wolverines.
+                        Go blue!
+                        I also enjoy working on DIY projects and playing sub-par golf.
                     </p>
                     <div class="center-button-wrapper">
                         <a href="files/andrew_vernier_resume.pdf" class="btn btn-primary btn-lg page-scroll custom-button">My Resume</a></div>
@@ -148,7 +153,7 @@
                 <ul class="social-icons list-inline">
                     <li class="list-inline-item">
                         <div class="social-icon-container">
-                            <a href="https://github.com/amverni"><i class="fa fa-github fa-2x"></i></a>
+                            <a href="https://github.com/amverni" class="fa fa-github fa-2x"></a>
                         </div>
                     </li>
                     <li class="list-inline-item">
@@ -182,7 +187,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Copyright &copy 2020 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
+                <p>Copyright &copy 2022 &nbsp&nbsp&nbsp&nbsp Andrew M. Vernier &nbsp&nbsp&nbsp&nbsp <a href="mailto:amverni@umich.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
         </div>
     </div>
